Fix ui-container causing horizontal scrolling

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,16 +1,26 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap');
+/*
+
+* {
+    background: #000 !important;
+    color: #0f0 !important;
+    outline: solid #f00 1px !important;
+  }
+
+  */
+
 html, body {
     width: 100%;
     height: 100%;
     margin: 0;
     padding: 0;
     overflow-x: hidden;
+    overflow-y: hidden;
     background-color: black;
 }
 
 body {
     font-family: 'Roboto Mono', monospace;
-    margin: 0;
 }
 
 /*----------Navigation bar--------*/
@@ -35,16 +45,14 @@ canvas {
 /*----------Wrappers--------*/
 
 main {
-    height: 100%;
-    width: 100%;
     background-color: black;
 }
 
 #wrapper {
     /*https://css-tricks.com/the-trick-to-viewport-units-on-mobile/*/
     /*  height: calc(var(--vh, 1vh) * 100);*/
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     /*  padding-top:2.5%;
     padding-bottom:2.5%;*/
 }
@@ -75,7 +83,7 @@ main {
     /*height: 15vh;*/
     background-color: rgba(20, 20, 20, 0.5);
     position: absolute;
-    width: 100%;
+    width: 90%; /*fix gap on right hand side*/
     bottom: 0;
     left: 50%;
     -webkit-transform: translateX(-50%);
